[package]
name = "cftool"
version = "0.7.0"
authors = ["Xi Ruoyao <xry111@mengyan1223.wang>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "gzip", "socks", "multipart", "native-tls-alpn" ] }
regex = "1.6"
clap = { version = "3.2.21", features = ["derive"] }
directories = "4.0"
log = "0.4"
stderrlog = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rpassword = "7.0"
url = "2.2.2"
termcolor = "1.1"
error-chain = "0.12.4"
cookie_store = "0.17.0"
git-version = "0.3.5"
serde-aux = "4.0.0"
reqwest_cookie_store = "0.4.0"

[patch.crates-io]
reqwest_cookie_store = { git = 'https://github.com/xdu-icpc/reqwest_cookie_store', branch = 'cookie-store-0_17' }
