[package]
name = "cftool"
version = "0.7.0"
authors = ["Xi Ruoyao <xry111@mengyan1223.wang>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "gzip", "socks", "multipart", "native-tls-alpn" ] }
regex = "1.6"
clap = { version = "4.0.29", features = ["derive"] }
directories = "4.0"
log = "0.4"
stderrlog = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rpassword = "7.2"
url = "2.3.1"
termcolor = "1.1"
error-chain = "0.12.4"
git-version = "0.3.5"
serde-aux = "4.1.2"
reqwest_cookie_store = "0.5.0"
syn = { version = "1.0.108", features = ["full", "extra-traits"] }
thiserror = "1.0"
quote = "1.0.21"
proc-macro2 = "1.0.47"
litrs = "0.2.3"
aes = "0.8.2"
cbc = "0.1.2"
hex = "0.4.3"
